include(CTest)

macro(set_compilation_settings NAME)
    target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
    target_link_libraries(${NAME} PRIVATE sylvan::sylvan)
    target_compile_features(${NAME} PRIVATE c_std_11 cxx_std_11)
    target_compile_options(${NAME} PRIVATE -Wall -Wextra -Werror -Wno-deprecated -Wno-unused)
    add_test(${NAME} ${NAME})
endmacro(set_compilation_settings)

macro(add_test_file NAME SOURCE)
    add_executable(${NAME} ${SOURCE})
    set_compilation_settings(${NAME})
endmacro(add_test_file)

add_test_file(test_basic test_basic.c)
add_test_file(test_cxx test_cxx.cpp)
add_test_file(test_zdd test_zdd.c)
add_test_file(test_bitmap test_bitmap.c)
add_test_file(test_reorder test_reorder.c)